--- a/index.qmd
+++ b/index.qmd
@@ -1,19 +1,24 @@
 ---
-title: "Final Project: *Weather-Disease Correlation Explorer*"
+title: "Weather-Respiratory Diseases Correlation Explorer"
 author: 
-  - name: Team MMI - Juanyu Zhang, Yunyi Ru
-description: "ADD YOUR PROJECT DESCRIPTION HERE"
+  - name: Team MMI
+description: "JHSPH 140.777 Statistical Programming Final Project."
 date: 2024-12-11
 knitr: true
 bibliography:
   - my-refs.bib
 ---
 
+| Name         | Job                          | JHED     | E-mail           |
+|--------------|------------------------------|----------|------------------|
+| Juanyu Zhang | Interactive Dashboard        | jzhan398 | jzhan398\@jh.edu |
+| Yunyi Ru     | Data Gathering and Wrangling | yru3     | yru3\@jh.edu     |
+
 # Project Overview
 
 We want to investigate the correlation between climate and weather-related conditions and outbreaks of two respiratory viruses, influenza and respiratory syncytial virus (RSV).
 
-Influenza is an RNA virus from the *Orthomyxoviridae* family that frequently mutates, causing seasonal epidemics, while RSV is an RNA virus from the *Paramyxoviridae* family that primarily affects young children and the elderly, often leading to severe lower respiratory infections. 
+Influenza is an RNA virus from the *Orthomyxoviridae* family that frequently mutates, causing seasonal epidemics, while RSV is an RNA virus from the *Paramyxoviridae* family that primarily affects young children and the elderly, often leading to severe lower respiratory infections.
 
 Both viruses pose significant public health challenges due to their widespread transmission and potential for severe disease.
 
@@ -21,7 +26,7 @@ Climate and weather conditions can influence the activity and spread of both vir
 
 # Project Goals
 
-In this project, we plan to integrate weather data and disease incidence data together to perform correlation and regression analysis, and to build an interactive dashboard showing those relationships. If possible, we also want to build a machine learning model to predict potential disease outbreaks based on weather data. 
+In this project, we plan to integrate weather data and disease incidence data together to perform correlation and regression analysis, and to build an interactive dashboard showing those relationships. If possible, we also want to build a machine learning model to predict potential disease outbreaks based on weather data.
 
 # Project
 
@@ -31,10 +36,12 @@ In this project, we plan to integrate weather data and disease incidence data to
 library('here')
 library('tidyverse')
 library('ggplot2')
+theme_set(theme_bw())
 library('lubridate')
 library('knitr')
 library('RSocrata') # a package to read socrata data - which is the way CDC datasets are stored. see CRAN documentation here: https://cran.r-project.org/web/packages/RSocrata/index.html
 library('openmeteo') # a package to scrap data from openmeteo API. see CRAN documentation here: https://cran.r-project.org/web/packages/openmeteo/openmeteo.pdf
+library('reshape2')
 ```
 
 ## Load Data
@@ -74,7 +81,7 @@ union(unique(RSVdat$season), unique(fludat$season))
 
 As is shown here, the RESP-NET data contains weekly disease incident data from 15 different states (Utah, Tennessee, Oregon, New York, New Mexico, Minnesota, Michigan, Maryland, Georgia, Connecticut, Colorado, California, North Carolina, Ohio, and Iowa - 'Overall' should be excluded) and 7 flu seasons (2018 to 2024).
 
-We then need to get weather data for those states in those time periods using the OpenMeteo API. We are using the coordinates for the geographic centers [you should add a ref link here!] for each state here. 
+We then need to get weather data for those states in those time periods using the OpenMeteo API. We are using the coordinates for the geographic centers \[you should add a ref link here!\] for each state here.
 
 ```{r load_data_weather}
 # Define the function to fetch weather data and add site information
@@ -98,7 +105,6 @@ fetch_weather_data <- function(state, lat, lon) {
       "et0_fao_evapotranspiration"
     )
   )
-  
   weather_data <- weather_data %>%
     mutate(site = state)
 }
@@ -129,6 +135,9 @@ saveRDS(weather, file = here("data", "weather.RDS"))
 
 # load data
 weather <- readRDS(here("data", "weather.RDS"))
+
+# have a look
+kable(head(weather))
 ```
 
 ## Data Wrangling
@@ -198,13 +207,137 @@ RESPdat.clean <- RESPdat %>%
          year = year(date),
          week = epiweek(date),
          y_w = paste(mmwr_year, mmwr_week, sep = "_"),
-         pathogen = ifelse(surveillance_network == "RSV-NET", "RSV", "influenza"), 
+         pathogen = ifelse(surveillance_network == "RSV-NET", "RSV", "influenza")
          ) %>%
   select(-mmwr_year, -mmwr_week, -surveillance_network, -season, -age_group, -sex, -race_ethnicity, -X_weekenddate, -type)
 
+# melt to long data
+week_weather_melted <- melt(week_weather, 
+                          id.vars = c("week", "site", "year"), 
+                          measure.vars = c("temp_max", "temp_min", "precip_sum", "precip_hr", "sunshine", "daylight", "wind_speed_max", "wind_gusts_max", "shortwave", "evapo"), 
+                          variable.name = "type", 
+                          value.name = "value")
+
 # bind RESPdat.clean and week_weather together
 RESP_weather <- left_join(RESPdat.clean, week_weather, by = c("y_w", "site", "year", "week"))
+RESP_weather <- RESP_weather %>%
+  drop_na() %>%
+  mutate(weekly_rate = as.numeric(weekly_rate), 
+         cumulative_rate = as.numeric(cumulative_rate))
+
+# have a look!
+kable(head(RESP_weather))
+
+# save data
+saveRDS(RESP_weather, file = here("data", "RESP_weather.RDS"))
 ```
+
+## Data Visualization
+
+```{r}
+# basic respiratory virus data visualization
+# influenza
+RESP_weather_flu <- RESP_weather %>%
+  filter(pathogen == "influenza")
+
+ggplot(RESP_weather_flu, aes(x = week, y = weekly_rate, color = as.character(year))) +
+  geom_rect(aes(xmin = -Inf, xmax = 20, ymin = -Inf, ymax = Inf), inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+  geom_rect(aes(xmin = 40, xmax = Inf, ymin = -Inf, ymax = Inf), inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+  facet_wrap(~site) +
+  geom_point(size = 0.5) +
+  geom_line() +
+  scale_color_brewer(palette = 'Set2') +
+  labs(
+      title = 'Weekly Rates of Influenza-Associated Hospitalizations by State, from 2018 to 2024',
+      subtitle = 'Data Source: CDC RESP-NET',
+      caption = 'Biostats 140.777 Project 4, Team MMI',
+      y = 'Hospitalization rate per 100,000',
+      x = 'Epidemiology Week', 
+      color = 'Year'
+   )
+
+# rsv
+RESP_weather_RSV <- RESP_weather %>%
+  filter(pathogen == "RSV")
+
+ggplot(RESP_weather_RSV, aes(x = week, y = weekly_rate, color = as.character(year))) +
+  geom_rect(aes(xmin = -Inf, xmax = 20, ymin = -Inf, ymax = Inf), inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+  geom_rect(aes(xmin = 40, xmax = Inf, ymin = -Inf, ymax = Inf), inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+  facet_wrap(~site) +
+  geom_point(size = 0.5) +
+  geom_line() +
+  scale_color_brewer(palette = 'Set2') +
+  labs(
+      title = 'Weekly Rates of RSV-Associated Hospitalizations by State, from 2018 to 2024',
+      subtitle = 'Data Source: CDC RESP-NET',
+      caption = 'Biostats 140.777 Project 4, Team MMI',
+      y = 'Hospitalization rate per 100,000',
+      x = 'Epidemiology Week', 
+      color = 'Year'
+   )
+```
+```{r}
+library(shiny)
+library(shinydashboard)
+
+# UI
+ui <- dashboardPage(
+  dashboardHeader(title = "Weekly Rates"),
+  dashboardSidebar(
+    selectInput("state", "Select State:", 
+                choices = unique(RESP_weather$site), 
+                selected = unique(RESP_weather$site)[1]),
+    selectInput("year", "Select Year:", 
+                choices = unique(RESP_weather$year), 
+                selected = unique(RESP_weather$year)[1], 
+                multiple = TRUE),
+    selectInput("pathogen", "Select Pathogen:", 
+                choices = unique(RESP_weather$pathogen), 
+                selected = unique(RESP_weather$pathogen)[1], 
+                multiple = TRUE)
+  ),
+  dashboardBody(
+    fluidRow(
+      box(title = "Weekly Rates of Repiratory Virus Infection-Associated Hospitalizations",
+          width = 12,
+          plotOutput("rsvPlot", height = "600px"))
+    )
+  )
+)
+
+# Server
+server <- function(input, output, session) {
+  
+  filtered_data <- reactive({
+    RESP_weather %>%
+      filter(site == input$state, year %in% input$year, pathogen %in% input$pathogen)
+  })
+
+  output$rsvPlot <- renderPlot({
+    ggplot(filtered_data(), aes(x = week, y = weekly_rate, color = as.character(year), shape = pathogen, linetype = pathogen)) +
+      geom_rect(aes(xmin = -Inf, xmax = 20, ymin = -Inf, ymax = Inf), 
+                inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+      geom_rect(aes(xmin = 40, xmax = Inf, ymin = -Inf, ymax = Inf), 
+                inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
+      facet_wrap(~site) +
+      geom_point() +
+      geom_line() +
+      scale_color_brewer(palette = 'Set2') +
+      labs(
+        subtitle = 'Data Source: CDC RESP-NET',
+        caption = 'Biostats 140.777 Project 4, Team MMI',
+        y = 'Hospitalization rate per 100,000',
+        x = 'Epidemiology Week', 
+        color = 'Year'
+      ) +
+      theme_minimal()
+  })
+}
+
+# Run the app
+shinyApp(ui, server)
+```
+
 
 ## Dashboard
 
@@ -217,4 +350,3 @@ RESP_weather <- left_join(RESPdat.clean, week_weather, by = c("y_w", "site", "ye
 ```{r ml}
 
 ```
-
