--- a/index.qmd
+++ b/index.qmd
@@ -3,16 +3,18 @@ title: "Weather-Respiratory Diseases Correlation Explorer"
 author: 
   - name: Team MMI
 description: "JHSPH 140.777 Statistical Programming Final Project."
-date: 2024-12-11
+date: 2024-12-19
 knitr: true
 bibliography:
   - my-refs.bib
 ---
 
-| Name         | Job                          | JHED     | E-mail           |
-|--------------|------------------------------|----------|------------------|
-| Juanyu Zhang | Interactive Dashboard        | jzhan398 | jzhan398\@jh.edu |
-| Yunyi Ru     | Data Gathering and Wrangling | yru3     | yru3\@jh.edu     |
+# Team and Contacts
+
+| Name         |  JHED     | E-mail           |
+|--------------|-----------|------------------|
+| Juanyu Zhang |  jzhan398 | jzhan398\@jh.edu |
+| Yunyi Ru     |  yru3     | yru3\@jh.edu     |
 
 # Project Overview
 
@@ -42,9 +44,6 @@ library('knitr')
 library('RSocrata') # a package to read socrata data - which is the way CDC datasets are stored. see CRAN documentation here: https://cran.r-project.org/web/packages/RSocrata/index.html
 library('openmeteo') # a package to scrap data from openmeteo API. see CRAN documentation here: https://cran.r-project.org/web/packages/openmeteo/openmeteo.pdf
 library('reshape2')
-library('shiny')
-library('shinydashboard')
-library('shinyjs')
 ```
 
 ## Load Data
@@ -288,149 +287,4 @@ corr_matrix <- cor(RESP_weather_corr %>% select_if(is.numeric), use = 'complete.
 corrplot(corr_matrix, type = 'lower', diag = FALSE)
 
 # 
-```
-
-```{r}
-library(shiny)
-library(shinydashboard)
-
-# UI
-ui <- dashboardPage(
-  dashboardHeader(title = "Weekly Rates"),
-  dashboardSidebar(
-    selectInput("state", "Select State:", 
-                choices = unique(RESP_weather$site), 
-                selected = unique(RESP_weather$site)[1]),
-    selectInput("year", "Select Year:", 
-                choices = unique(RESP_weather$year), 
-                selected = unique(RESP_weather$year)[1], 
-                multiple = TRUE),
-    selectInput("pathogen", "Select Pathogen:", 
-                choices = unique(RESP_weather$pathogen), 
-                selected = unique(RESP_weather$pathogen)[1], 
-                multiple = TRUE)
-  ),
-  dashboardBody(
-    fluidRow(
-      box(title = "Weekly Rates of Repiratory Virus Infection-Associated Hospitalizations",
-          width = 12,
-          plotOutput("rsvPlot", height = "600px"))
-    )
-  )
-)
-
-# Server
-server <- function(input, output, session) {
-  
-  filtered_data <- reactive({
-    RESP_weather %>%
-      filter(site == input$state, year %in% input$year, pathogen %in% input$pathogen)
-  })
-
-  output$rsvPlot <- renderPlot({
-    ggplot(filtered_data(), aes(x = week, y = weekly_rate, color = as.character(year), shape = pathogen, linetype = pathogen)) +
-      geom_rect(aes(xmin = -Inf, xmax = 20, ymin = -Inf, ymax = Inf), 
-                inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
-      geom_rect(aes(xmin = 40, xmax = Inf, ymin = -Inf, ymax = Inf), 
-                inherit.aes = FALSE, fill = "#eeeeee", alpha = 1) +
-      facet_wrap(~site) +
-      geom_point() +
-      geom_line() +
-      scale_color_brewer(palette = 'Set2') +
-      labs(
-        subtitle = 'Data Source: CDC RESP-NET',
-        caption = 'Biostats 140.777 Project 4, Team MMI',
-        y = 'Hospitalization rate per 100,000',
-        x = 'Epidemiology Week', 
-        color = 'Year'
-      ) +
-      theme_minimal()
-  })
-}
-
-# Run the app
-shinyApp(ui, server)
-```
-
-
-## Dashboard
-
-```{r dashboard}
-library(shiny)
-library(shinydashboard)
-library(ggplot2)
-library(dplyr)
-
-weather_labels <- c(
-  "temp_max" = "Maximum Temperature",
-  "temp_min" = "Minimum Temperature",
-  "precip_sum" = "Precipitation",
-  "sunshine" = "Sunshine",
-  "daylight" = "Daylight",
-  "wind_speed_max" = "Maximum Wind Speed"
-)
-
-ui <- dashboardPage(
-  dashboardHeader(title = "Pathogen & Weather Relationship Explorer"),
-  dashboardSidebar(
-    selectInput("state", "Select State", choices = unique(RESP_weather$site), selected = "California"),
-    selectInput("pathogen", "Select Pathogen", choices = unique(RESP_weather$pathogen), selected = "RSV"),
-    sliderInput("year_range", "Select Year Range", min = min(RESP_weather$year), max = max(RESP_weather$year), value = c(2018, 2024)),
-    selectInput("weather_var", "Select Weather Variable", choices = c("Maximun Temperature" = "temp_max", "Minimun Temperature" = "temp_min", "Precipitation" = "precip_sum", "Sunshine" = "sunshine", "Daylight" = "daylight", "Maximun Wind Speed" = "wind_speed_max"), selected = "temp_max"),
-    checkboxInput("show_trend", "Show Trend Line", value = TRUE)
-  ),
-  dashboardBody(
-    plotOutput("scatter_plot")
-  )
-)
-
-server <- function(input, output) {
-  filtered_data <- reactive({
-    RESP_weather %>%
-      filter(
-        site == input$state,
-        pathogen == input$pathogen,
-        year >= input$year_range[1],
-        year <= input$year_range[2],
-        !is.na(get(input$weather_var)),   # Use get() to refer to dynamic column names
-        !is.na(weekly_rate)
-      )
-  })
-  output$scatter_plot <- renderPlot({
-    data <- filtered_data()
-    if (nrow(data) == 0) {
-      return(NULL)
-    }
-    model <- lm(weekly_rate ~ get(input$weather_var), data = data)  # Use get() for dynamic column name
-    r_squared <- summary(model)$r.squared
-    p <- ggplot(data, aes(x = get(input$weather_var), y = weekly_rate)) +
-      geom_point(alpha = 0.7, color = "#3498db", size = 3) +
-      labs(
-        x = weather_labels[input$weather_var],
-        y = "Weekly Rate",
-        title = paste("Relationship Between", input$pathogen, "with", weather_labels[input$weather_var], "in", input$state)
-      ) +
-      theme_minimal(base_size = 15) +
-      theme(
-        plot.title = element_text(hjust = 0.5, size = 18, color = "#2c3e50"),
-        axis.title = element_text(size = 14, color = "#2c3e50"),
-        axis.text = element_text(size = 12),
-        panel.grid.major = element_line(color = "#ecf0f1", size = 0.5),
-        panel.grid.minor = element_line(color = "#bdc3c7", size = 0.25)
-      )
-    if (input$show_trend) {
-      p <- p + geom_smooth(method = "lm", color = "#e74c3c", size = 1)
-    }
-    p + annotate(
-      "text", x = 0.8 * max(data[[input$weather_var]], na.rm = TRUE), 
-      y = 0.9 * max(data$weekly_rate, na.rm = TRUE),
-      label = paste("R² =", round(r_squared, 2)),
-      color = "#2c3e50", size = 5
-    )
-  })
-}
-
-shinyApp(ui, server)
-
-
 ```
